# data-science-cli-tool-972a0e

./: CONTRIBUTING.md  README.md  pyproject.toml
src/data_science_cli_tool/: __init__.py  cli.py  core.py
tests/: test_core.py
