[tool.poetry]
name = "data-science-cli-tool"
version = "0.1.0"
description = "A CLI tool for data scientists that automates the process of cleaning and preprocessing data."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [{ include = "src/data_science_cli_tool" }]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3"
click = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"